--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
 
 android {
     compileSdkVersion 30
@@ -8,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.stanny.housesketchpad"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -20,12 +22,16 @@ android {
         javaCompileOptions {
             annotationProcessorOptions {
                 includeCompileClasspath true
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
             }
         }
 
         lintOptions {
             checkReleaseBuilds false
             abortOnError false
+        }
+        dataBinding {
+            enabled true
         }
     }
 
@@ -54,4 +60,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation project(path: ':sketchpad')
+    implementation project(path: ':entrypad')
+    implementation'com.alibaba:arouter-api:1.3.1'
+    annotationProcessor'com.alibaba:arouter-compiler:1.1.4'
+    implementation project(path: ':zxmvp')
 }
