--- a/entrypad/src/main/AndroidManifest.xml
+++ b/entrypad/src/main/AndroidManifest.xml
@@ -1,2 +1,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gt.entrypad" />
+package="com.gt.entrypad">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <application>
+
+    <activity android:name=".module.project.ui.activity.ProjectListActivity"
+        android:screenOrientation="landscape"
+        android:theme="@style/MainAppTheme"/>
+    <activity android:name=".module.project.ui.activity.ProjectHomePageActivity"
+        android:screenOrientation="landscape"
+        android:theme="@style/MainAppTheme"/>
+    <activity android:name=".module.project.ui.activity.CameraActivity"
+        android:screenOrientation="landscape"
+        android:theme="@style/MainAppTheme"/>
+</application>
+</manifest>
