--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,17 @@
         android:supportsRtl="true"
         android:name=".MyApplication"
         android:theme="@style/MainAppTheme"
-        tools:ignore="LockedOrientationActivity">
+        android:requestLegacyExternalStorage="true"
+        android:networkSecurityConfig="@xml/network_security_config">
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.stanny.housesketchpad.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
         <meta-data
             android:name="com.stanny.housesketchpad.api.ApiConfigModule"
             android:value="ConfigModule" />
